# sidepod-app

./: .prettierrc.cjs  index.html  package-lock.json  package.json  utils.ts  vite.config.ts
src/: App.jsx  main.jsx  main.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs
src/components/: ProgressBar.jsx
src/components/buttons/: Loading.jsx  LoveIcon.jsx  NextIcon.jsx  PlayPauseIcon.jsx  PreviousIcon.jsx
src/components/settings/: Customization.jsx  Login.jsx  Premium.jsx  System.jsx  Update.jsx
src/helpers/: APIHelper.js  URLHelper.js  fileHelper.js  stateHelper.js  tabHelper.js  timeHelper.js  trackHelper.js
src/pages/: Mini.jsx  Settings.jsx  Widget.jsx
src/styles/: settings.scss
