[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = [ "window-start-dragging", "window-set-always-on-top", "window-close", "window-set-decorations", "window-set-skip-taskbar", "window-set-position", "window-set-max-size", "window-hide", "window-set-size", "window-center", "window-set-min-size", "window-show", "window-set-icon", "window-set-fullscreen", "window-set-focus", "clipboard-read-text", "fs-all", "global-shortcut-all", "macos-private-api", "notification-all", "process-exit", "process-relaunch", "shell-execute", "shell-open", "system-tray"] }
tauri-plugin-positioner = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
